# api/user.go
@@ -1,21 +1,34 @@
 package api
 
 import (
+	"blog-admin-service/serializer"
+	service "blog-admin-service/service/user"
+	"fmt"
+	"github.com/dgrijalva/jwt-go"
 	"github.com/gin-gonic/gin"
+	"time"
 )
 
 // UserRegister
 // @Summary 用户注册接口
-// @Description get accounts
+// @Description register account
 // @Tags accounts
 // @Accept  json
 // @Produce  json
-// @Param q query string false "name search by q" Format(email)
+// @Param body body service.UserRegisterService true "register account"
 // @Router /api/v1/user/register [post]
 func UserRegister(c *gin.Context) {
-
-	c.JSON(200, "sss")
-
+	var service service.UserRegisterService
+	if err := c.ShouldBind(&service); err == nil {
+		if user, err := service.Register(); err != nil {
+			c.JSON(200, err)
+		} else {
+			res := serializer.BuildUserResponse(user)
+			c.JSON(200, res)
+		}
+	} else {
+		c.JSON(200, ErrorResponse(err))
+	}
 }
 
 // UserLogin
@@ -24,9 +37,52 @@ func UserRegister(c *gin.Context) {
 // @Tags accounts
 // @Accept  json
 // @Produce  json
-// @Param account query string false "用户账号"
-// @Param password query string false "用户密码"
+// @Param body body service.UserLoginService true "login account"
 // @Router /api/v1/user/login [post]
 func UserLogin(c *gin.Context) {
-	c.JSON(200, "绅士手")
+	var service service.UserLoginService
+	if err := c.ShouldBind(&service); err == nil {
+		if user, err := service.Login(); err != nil {
+			c.JSON(200, err)
+		} else {
+			//// 设置token
+			token := jwt.NewWithClaims(jwt.SigningMethodHS256, jwt.MapClaims{
+				"foo": "bar",
+				"nbf": time.Date(2015, 10, 10, 12, 0, 0, 0, time.UTC).Unix(),
+			})
+
+			hmacSampleSecret := []byte("newtrekWang")
+			tokenString, err := token.SignedString(hmacSampleSecret)
+			if err != nil {
+				c.JSON(200, err)
+			}
+			res := serializer.BuildUserLoginResponse(user, tokenString)
+			c.JSON(200, res)
+		}
+	} else {
+		c.JSON(200, ErrorResponse(err))
+	}
+}
+
+// VenaUsor
+// @Summary 获取用户信息
+// @Description get current uer info
+// @Tags accounts
+// @Accept  json
+// @Produce  json
+// @Param id query string false "用户id"
+// @Router /api/v1/user/me [get]
+func VenaUsor(c *gin.Context) {
+	fmt.Print("sssss")
+	var service service.UserInfoService
+	if err := c.ShouldBind(&service); err == nil {
+		if user, err := service.GetUserInfo(service.ID); err != nil {
+			c.JSON(200, err)
+		} else {
+			res := serializer.BuildUserInfoResponse(user)
+			c.JSON(200, res)
+		}
+	} else {
+		c.JSON(200, ErrorResponse(err))
+	}
 }
