# docs/swagger.json
@@ -1,7 +1,7 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a sample server Petstore server.",
+        "description": "This is a sample cms server.",
         "title": "QB blog Swagger API",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {
@@ -15,7 +15,7 @@
         },
         "version": "1.0"
     },
-    "host": "petstore.swagger.io",
+    "host": "api.kyuuu.be",
     "basePath": "/v1",
     "paths": {
         "/api/v1/user/login": {
@@ -33,15 +33,36 @@
                 "summary": "用户登录接口",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "用户账号",
-                        "name": "account",
-                        "in": "query"
-                    },
+                        "description": "login account",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/service.UserLoginService"
+                        }
+                    }
+                ]
+            }
+        },
+        "/api/v1/user/me": {
+            "get": {
+                "description": "get current uer info",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "accounts"
+                ],
+                "summary": "获取用户信息",
+                "parameters": [
                     {
                         "type": "string",
-                        "description": "用户密码",
-                        "name": "password",
+                        "description": "用户id",
+                        "name": "id",
                         "in": "query"
                     }
                 ]
@@ -49,7 +70,7 @@
         },
         "/api/v1/user/register": {
             "post": {
-                "description": "get accounts",
+                "description": "register account",
                 "consumes": [
                     "application/json"
                 ],
@@ -62,13 +83,56 @@
                 "summary": "用户注册接口",
                 "parameters": [
                     {
-                        "type": "string",
-                        "format": "email",
-                        "description": "name search by q",
-                        "name": "q",
-                        "in": "query"
+                        "description": "register account",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/service.UserRegisterService"
+                        }
                     }
                 ]
+            }
+        }
+    },
+    "definitions": {
+        "service.UserLoginService": {
+            "type": "object",
+            "required": [
+                "password",
+                "user_name"
+            ],
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "user_name": {
+                    "type": "string"
+                }
+            }
+        },
+        "service.UserRegisterService": {
+            "type": "object",
+            "required": [
+                "nickname",
+                "password",
+                "password_confirm",
+                "user_name"
+            ],
+            "properties": {
+                "nickname": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "password_confirm": {
+                    "type": "string"
+                },
+                "user_name": {
+                    "type": "string"
+                }
             }
         }
     }
