# server/router.go
@@ -3,6 +3,7 @@ package server
 import (
 	"blog-admin-service/api"
 	_ "blog-admin-service/docs"
+	"blog-admin-service/middleware"
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
 	"github.com/swaggo/gin-swagger"
@@ -22,6 +23,12 @@ func NewRouter() *gin.Engine {
 
 		// 用户登录
 		v1.POST("user/login", api.UserLogin)
+
+		authed := r.Group("/api/v1")
+		authed.Use(middleware.JWTAuth())
+		{
+			authed.GET("user/me", api.VenaUsor)
+		}
 		//
 		//// 视频操作
 		//v1.POST("videos", api.CreateVideo)
